--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -31,9 +33,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    font-family: "Roboto", sans-serif;
+    font-size: clamp(10px, 4.5vmin, 25px);
+    font-weight: 700;
+    
     background-color: lightskyblue;
 }
 
 .clickable:hover {
-    outline: 2px solid red
+    outline: 2px solid red;
+    cursor: pointer;
+}
+
+.btn {
+    background: linear-gradient(#429fb6, #eee);
 }
