--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 
 label,
 .game-mode,
+.board,
 .card,
 .btn {
     font-family: "Roboto", sans-serif;
@@ -40,6 +41,23 @@ label,
     background-color: #eee;
     box-shadow: inset 0 0 20px 10px #77777732;
     border: 1vmin solid #77777732;
+}
+
+.board.win::after {
+    content: "WIN!";
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 40px;
+    font-weight: 700;
+    color: greenyellow;
+    text-shadow: 0 0 10px black;
+    background-color: #00000032;
 }
 
 .card {
